--- a/ng-app/src/app/menu/menu.component.html
+++ b/ng-app/src/app/menu/menu.component.html
@@ -1,14 +1,14 @@
 <ul  class="nav nav-pills nav-stacked">
   <li role="presentation" routerLinkActive="active"><a routerLink="/list">List</a></li>
-  <li *ngIf="hasRole('ADMIN,USER')" role="presentation" routerLinkActive="active"><a routerLink="/add">Add</a></li>
+  <li *ngIf="hasRole(ADMIN)" role="presentation" routerLinkActive="active"><a routerLink="/add">Add</a></li>
   <li role="presentation" class="dropdown">
     <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
       View <span class="caret"></span>
     </a>
     <ul class="dropdown-menu">
-      <li *ngFor="let student of students">
-        <a  (click)="showDetail(student)">
-          {{student.name}}
+      <li *ngFor="let product of products">
+        <a  (click)="showDetail(product)">
+          {{product.name}}
         </a>
       </li>
     </ul>
