add UserService (back-end)

--- a/ng-app/src/app/menu/menu.component.html
+++ b/ng-app/src/app/menu/menu.component.html
@@ -1,6 +1,9 @@
 <ul  class="nav nav-pills nav-stacked">
   <li role="presentation" routerLinkActive="active"><a routerLink="/list">List</a></li>
-  <li *ngIf="hasRole(ADMIN)" role="presentation" routerLinkActive="active"><a routerLink="/add">Add</a></li>
+  <li role="presentation" routerLinkActive="active"><a routerLink="/add">Add</a></li>
+  <li role="presentation" routerLinkActive="active"><a routerLink="/login">Login</a></li>
+  <li role="presentation" routerLinkActive="active"><a routerLink="/user-list">User List</a></li>
+  <li role="presentation" routerLinkActive="active"><a routerLink="/user-add">User Add</a></li>
 </ul>
 
 
