--- a/ng-app/src/app/user/user-add/user-add.component.html
+++ b/ng-app/src/app/user/user-add/user-add.component.html
@@ -33,7 +33,7 @@
     </div>
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-default">Add</button>
+        <button type="submit" class="btn btn-default" (click)="addUser(user)">Add</button>
       </div>
     </div>
   </form>
