--- a/ng-app/src/app/user/user-list/user-list.component.html
+++ b/ng-app/src/app/user/user-list/user-list.component.html
@@ -1,3 +1,13 @@
+<div class="row panel-body">
+  <div class="col-md-8 col-sm-8">
+    <div class="input-group">
+      <input type="text" class="form-control" placeholder="Search for..." [(ngModel)]="search">
+      <span class="input-group-btn">
+        <button class="btn btn-default" type="button" (click)="onSearch()">Go!</button>
+      </span>
+    </div>
+  </div>
+</div>
 <p>
   user-list works!
 </p>
