--- a/ng-app/src/app/app.component.html
+++ b/ng-app/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row page-header">
-    <h1 class="col-sm-offset-1">Hello {{name}}</h1>
+    <h1 class="col-sm-offset-1">{{name}}</h1>
   </div>
   <div class="row">
     <div class="col-sm-3 col-md-2">
