--- a/ng-app/src/app/products/add/products.add.component.html
+++ b/ng-app/src/app/products/add/products.add.component.html
@@ -1,5 +1,5 @@
 <div>
-  <form class="form-horizontal " name="form" (ngSubmit)="f.form.valid && isValid() && addProduct(product)" #f="ngForm" novalidate>
+  <form class="form-horizontal " name="form" (ngSubmit)="f.form.valid && addProduct(product)" #f="ngForm" novalidate>
     <div class="form-group" [ngClass]="{'has-error':f.submitted && !name.valid}">
       <label class="col-sm-2 control-label">Product name : </label>
       <div class="col-sm-10">
