--- a/ng-app/src/app/products/view/products.view.component.html
+++ b/ng-app/src/app/products/view/products.view.component.html
@@ -37,13 +37,15 @@
     <div class="form-group">
       <label class="col-sm-2 control-label">Price : </label>
       <div class="col-sm-10 form-inline">
-        {{product?.price}}
+        {{product?.price | currency:'THB':true}}
       </div>
     </div>
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
-        <button type="button" class="btn btn-success btn-xs">Edit</button>
-        <button type="button" class="btn btn-danger btn-xs">Remove</button>
+        <button *ngIf="hasRole('STAFF')" type="button" class="btn btn-success btn-xs" (click)="editProduct(product)">
+          Edit
+        </button>
+        <button *ngIf="hasRole('STAFF')" type="button" class="btn btn-danger btn-xs">Remove</button>
       </div>
     </div>
   </form>
