--- a/ng-app/src/app/filenotfound/file-not-found.component.html
+++ b/ng-app/src/app/filenotfound/file-not-found.component.html
@@ -1,2 +1,2 @@
 <H2>The resource you have asked is not in the server</H2>
-<img src="./app/filenotfound/filenotfound.jpg">
+<img src="./filenotfound.jpg">
