--- a/ng-app/src/app/menu/menu.component.html
+++ b/ng-app/src/app/menu/menu.component.html
@@ -1,11 +1,11 @@
 <ul class="nav nav-pills nav-stacked">
-  <li *ngIf="hasNotRole('ADMIN')" role="presentation" routerLinkActive="active"><a routerLink="/list">List</a></li>
-  <li *ngIf="hasNotRole('ADMIN')" role="presentation" routerLinkActive="active"><a routerLink="/cart">Cart</a></li>
+  <li *ngIf="!hasRole('ADMIN')" role="presentation" routerLinkActive="active"><a routerLink="/list">List</a></li>
+  <li *ngIf="!hasRole('ADMIN, STAFF')" role="presentation" routerLinkActive="active"><a routerLink="/cart">Cart</a></li>
   <li *ngIf="hasRole('STAFF')" role="presentation" routerLinkActive="active"><a routerLink="/add">Add</a></li>
-  <li *ngIf="hasRole('ADMIN')" role="presentation" routerLinkActive="active"><a routerLink="/user-list">List User</a>
-  </li>
+  <li *ngIf="hasRole('ADMIN')" role="presentation" routerLinkActive="active"><a routerLink="/user-list">List User</a></li>
   <li *ngIf="hasRole('ADMIN')" role="presentation" routerLinkActive="active"><a routerLink="/user-add">Add User</a></li>
-  <li role="presentation" routerLinkActive="active"><a routerLink="/login">Login</a></li>
+  <li *ngIf="!hasRole('USER, ADMIN, STAFF')" role="presentation" routerLinkActive="active"><a routerLink="/login">Login</a></li>
+  <li *ngIf="hasRole('USER, ADMIN, STAFF')" role="presentation" routerLinkActive="active"><a (click)="logout()">Logout</a></li>
 </ul>
 
 
